--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,4 +3,11 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-list>
+    <ion-item *ngFor="let post of posts">
+      <img [src]="post.photo_url" col-12 />
+      <p>{{ post.description }}</p>
+      <p>{{ post.user.name }}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
