--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,9 +5,9 @@
 <ion-content padding>
   <ion-list>
     <ion-item *ngFor="let post of posts">
-      <img [src]="post.photo_url" col-12 />
+      <img [src]="post.photoUrl" />
       <p>{{ post.description }}</p>
-      <p>{{ post.user.name }}</p>
+      <p>{{ post.owner.name }}</p>
     </ion-item>
-  </ion-list>
+  </ion-list>  
 </ion-content>
